{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 69,
  "lineage": "07495ad6-7cc6-340b-4184-4e33820f6e65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "depi_gw12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842675975252:internet-gateway/igw-0e37a68de9a542f9c",
            "id": "igw-0e37a68de9a542f9c",
            "owner_id": "842675975252",
            "tags": {
              "Name": "depi-igw"
            },
            "tags_all": {
              "Name": "depi-igw"
            },
            "vpc_id": "vpc-0389c469d5d3ac3fe"
          },
          "dependencies": [
            "aws_vpc.depi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rww",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842675975252:route-table/rtb-0127efd00bd55b53b",
            "id": "rtb-0127efd00bd55b53b",
            "owner_id": "842675975252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e37a68de9a542f9c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rww"
            },
            "tags_all": {
              "Name": "private_rww"
            },
            "timeouts": null,
            "vpc_id": "vpc-0389c469d5d3ac3fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.depi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "puplic_rw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842675975252:route-table/rtb-06dbc430ad14a4d08",
            "id": "rtb-06dbc430ad14a4d08",
            "owner_id": "842675975252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e37a68de9a542f9c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "puplic_rw"
            },
            "tags_all": {
              "Name": "puplic_rw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0389c469d5d3ac3fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.depi_gw12",
            "aws_vpc.depi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "depi_rw_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0877b31888d8d51c2",
            "route_table_id": "rtb-06dbc430ad14a4d08",
            "subnet_id": "subnet-05b0bb05100fe902c"
          },
          "dependencies": [
            "aws_internet_gateway.depi_gw12",
            "aws_route_table.puplic_rw",
            "aws_subnet.puplic_supnet_12",
            "aws_vpc.depi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "depi_rw_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0796fff88ff42fef4",
            "route_table_id": "rtb-0127efd00bd55b53b",
            "subnet_id": "subnet-0b23bd859219d70ae"
          },
          "dependencies": [
            "aws_route_table.private_rww",
            "aws_subnet.private_supnet_1",
            "aws_vpc.depi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_supnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842675975252:subnet/subnet-0b23bd859219d70ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23bd859219d70ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842675975252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "depi_private_supnet_1"
            },
            "tags_all": {
              "Name": "depi_private_supnet_1"
            },
            "vpc_id": "vpc-0389c469d5d3ac3fe"
          },
          "dependencies": [
            "aws_vpc.depi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "puplic_supnet_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842675975252:subnet/subnet-05b0bb05100fe902c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b0bb05100fe902c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842675975252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "depi_puplic_supnet_1"
            },
            "tags_all": {
              "Name": "depi_puplic_supnet_1"
            },
            "vpc_id": "vpc-0389c469d5d3ac3fe"
          },
          "dependencies": [
            "aws_vpc.depi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "depi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842675975252:vpc/vpc-0389c469d5d3ac3fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007fa6868ebbd923e",
            "default_route_table_id": "rtb-079a324b87760579f",
            "default_security_group_id": "sg-00720935703c088bb",
            "dhcp_options_id": "dopt-059cbd814096ef8c9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0389c469d5d3ac3fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079a324b87760579f",
            "owner_id": "842675975252",
            "tags": {
              "Name": "depi-vpc"
            },
            "tags_all": {
              "Name": "depi-vpc"
            }
          }
        }
      ]
    }
  ]
}